pacman-app/deploy/overlays/eks/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  namespace: pacman-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    name: pacman
    app.kubernetes.io/name: pacman
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: pacman
    app.kubernetes.io/name: pacman
